Use excoveralls to report test coverage statistics

--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -11,21 +11,33 @@ jobs:
 
     name: Build and test
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
     - name: Set up Elixir
       uses: actions/setup-elixir@v1
       with:
         elixir-version: '1.10.3' # Define the elixir version [required]
         otp-version: '22.3' # Define the OTP version [required]
+
     - name: Restore dependencies cache
       uses: actions/cache@v2
       with:
         path: deps
         key: ${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}
         restore-keys: ${{ runner.os }}-mix-
+
     - name: Install dependencies
-      run: mix deps.get
+      run: |
+        mix deps.get
+        mix compile
+
+    - name: Check Formatting
+      run: mix format --check-formatted
+
     - name: Run tests
-      run: mix test
+      run: mix coveralls.github
+      env:
+        MIX_ENV: test
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
