Check code with dialyzer
And fix errors (missing alias).

--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -41,3 +41,8 @@ jobs:
       env:
         MIX_ENV: test
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Run dialyzer
+      run: |
+        mkdir -p priv/plts
+        MIX_ENV=test mix dialyzer
