--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -36,6 +36,9 @@ jobs:
     - name: Check Formatting
       run: mix format --check-formatted
 
+    - name: Run Credo
+      run: mix credo --strict
+
     - name: Run tests
       run: mix coveralls.github
       env:
