--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -11,6 +11,11 @@ jobs:
 
     name: Build and test
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        elixir: [1.10.3]
+        otp: [22.3]
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
@@ -18,17 +23,18 @@ jobs:
     - name: Set up Elixir
       uses: actions/setup-elixir@v1
       with:
-        elixir-version: '1.10.3' # Define the elixir version [required]
-        otp-version: '22.3' # Define the OTP version [required]
+        elixir-version: ${{ matrix.elixir }}
+        otp-version: ${{ matrix.otp }}
 
-    - name: Restore dependencies cache
+    - name: Retrieve Mix Dependencies Cache
       uses: actions/cache@v2
+      id: mix-cache # id to use in retrieve action
       with:
         path: deps
-        key: ${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}
-        restore-keys: ${{ runner.os }}-mix-
+        key: ${{ runner.os }}-${{ matrix.otp }}-${{ matrix.elixir }}-mix-${{ hashFiles(format('{0}{1}', github.workspace, '/mix.lock')) }}
 
     - name: Install dependencies
+      if: steps.mix-cache.outputs.cache-hit != 'true'
       run: |
         mix deps.get
         mix compile
@@ -39,13 +45,24 @@ jobs:
     - name: Run Credo
       run: mix credo --strict
 
+    - name: Retrieve PLT Cache
+      uses: actions/cache@v2
+      id: plt-cache
+      with:
+        path: priv/plts
+        key: ${{ runner.os }}-${{ matrix.otp }}-${{ matrix.elixir }}-plts-${{ hashFiles(format('{0}{1}', github.workspace, '/mix.lock')) }}
+
+    - name: Create PLTs
+      if: steps.plt-cache.outputs.cache-hit != 'true'
+      run: |
+        mkdir -p priv/plts
+        mix dialyzer --plt
+
+    - name: Run dialyzer
+      run: mix dialyzer --no-check --halt-exit-status
+
     - name: Run tests
       run: mix coveralls.github
       env:
         MIX_ENV: test
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Run dialyzer
-      run: |
-        mkdir -p priv/plts
-        MIX_ENV=test mix dialyzer
