--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -11,31 +11,32 @@ jobs:
 
     name: Build and test
     runs-on: ubuntu-latest
+
+    container:
+      image: hexpm/elixir:${{ matrix.elixir }}-erlang-${{ matrix.erlang }}-ubuntu-${{ matrix.ubuntu }}
+
     strategy:
       matrix:
-        elixir: [1.10.3]
-        otp: [22.3]
+        elixir: ["1.11.0"]
+        erlang: ["23.0"]
+        ubuntu: ["bionic-20200219"]
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
-
-    - name: Set up Elixir
-      uses: actions/setup-elixir@v1
-      with:
-        elixir-version: ${{ matrix.elixir }}
-        otp-version: ${{ matrix.otp }}
 
     - name: Retrieve Mix Dependencies Cache
       uses: actions/cache@v2
       id: mix-cache # id to use in retrieve action
       with:
         path: deps
-        key: ${{ runner.os }}-${{ matrix.otp }}-${{ matrix.elixir }}-mix-${{ hashFiles(format('{0}{1}', github.workspace, '/mix.lock')) }}
+        key: ${{ runner.os }}-${{ matrix.erlang }}-${{ matrix.elixir }}-mix-${{ hashFiles(format('{0}{1}', github.workspace, '/mix.lock')) }}
 
     - name: Install dependencies
       if: steps.mix-cache.outputs.cache-hit != 'true'
       run: |
+        mix local.rebar --force
+        mix local.hex --force
         mix deps.get
         mix compile
 
@@ -50,7 +51,7 @@ jobs:
       id: plt-cache
       with:
         path: priv/plts
-        key: ${{ runner.os }}-${{ matrix.otp }}-${{ matrix.elixir }}-plts-${{ hashFiles(format('{0}{1}', github.workspace, '/mix.lock')) }}
+        key: ${{ runner.os }}-${{ matrix.erlang }}-${{ matrix.elixir }}-plts-${{ hashFiles(format('{0}{1}', github.workspace, '/mix.lock')) }}
 
     - name: Create PLTs
       if: steps.plt-cache.outputs.cache-hit != 'true'
