--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -35,6 +35,8 @@ jobs:
     - name: Install dependencies
       if: steps.mix-cache.outputs.cache-hit != 'true'
       run: |
+        apt-get update
+        apt-get -y install git
         mix local.rebar --force
         mix local.hex --force
         mix deps.get
